--- a/lib/l10n/intl_be.arb
+++ b/lib/l10n/intl_be.arb
@@ -11809,5 +11809,20 @@
         "type": "String"
       }
     }
+  },
+  "ssoDialogTitle": "Чакаем, пакуль ўваход будзе завершаны",
+  "ssoDialogDesc": "Мы адкрылі новую ўкладку, каб вы маглі бяспечна ўвайсці.",
+  "ssoDialogHelpText": "🤔 Калі вы не ўбачылі новую ўкладку, калі ласка, праверце свой блакіроўшчык усплывальных акнаў.",
+  "@ssoDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@ssoDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
   }
 }
