--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -10815,5 +10815,20 @@
         "type": "String"
       }
     }
+  },
+  "ssoDialogTitle": "Ожидание завершения входа",
+  "ssoDialogDesc": "Мы открыли новую вкладку, чтобы вы могли безопасно войти.",
+  "ssoDialogHelpText": "🤔 Если вы не видите новую вкладку, пожалуйста, проверьте блокировщик всплывающих окон.",
+  "@ssoDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@ssoDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
   }
 }
