--- a/lib/l10n/intl_te.arb
+++ b/lib/l10n/intl_te.arb
@@ -11799,5 +11799,20 @@
         "type": "String"
       }
     }
+  },
+  "ssoDialogTitle": "సైన్ ఇన్ పూర్తి కావడానికి వేచి ఉంది",
+  "ssoDialogDesc": "మీరు సురక్షితంగా సైన్ ఇన్ కావడానికి మేము కొత్త టాబ్‌ను తెరిచాము.",
+  "ssoDialogHelpText": "🤔 మీరు కొత్త టాబ్‌ను చూడకపోతే, దయచేసి మీ పాప్-అప్ బ్లాకర్‌ను తనిఖీ చేయండి.",
+  "@ssoDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@ssoDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
   }
 }
