--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -10704,5 +10704,20 @@
         "type": "String"
       }
     }
+  },
+  "ssoDialogTitle": "Очікування завершення входу",
+  "ssoDialogDesc": "Ми відкрили нову вкладку, щоб ви могли безпечно увійти.",
+  "ssoDialogHelpText": "🤔 Якщо ви не побачили нову вкладку, будь ласка, перевірте блокувальник спливаючих вікон.",
+  "@ssoDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@ssoDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
   }
 }
