--- a/lib/l10n/intl_eo.arb
+++ b/lib/l10n/intl_eo.arb
@@ -11799,5 +11799,20 @@
         "type": "String"
       }
     }
+  },
+  "ssoDialogTitle": "Atendante, ke ensaluto finiĝu",
+  "ssoDialogDesc": "Ni malfermis novan langeton por ke vi povu ensaluti sekure.",
+  "ssoDialogHelpText": "🤔 Se vi ne vidis la novan langeton, bonvolu kontroli vian popup-blokilon.",
+  "@ssoDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@ssoDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
   }
 }
