--- a/lib/l10n/intl_ia.arb
+++ b/lib/l10n/intl_ia.arb
@@ -11788,5 +11788,20 @@
         "type": "String"
       }
     }
+  },
+  "ssoDialogTitle": "Atingindo para a conclusão do login",
+  "ssoDialogDesc": "Abrimos uma nova aba para que você possa fazer login com segurança.",
+  "ssoDialogHelpText": "🤔 Se você não viu a nova aba, verifique seu bloqueador de pop-ups.",
+  "@ssoDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@ssoDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
   }
 }
