--- a/lib/l10n/intl_th.arb
+++ b/lib/l10n/intl_th.arb
@@ -11768,5 +11768,20 @@
         "type": "String"
       }
     }
+  },
+  "ssoDialogTitle": "รอการลงชื่อเข้าใช้ให้เสร็จสิ้น",
+  "ssoDialogDesc": "เราได้เปิดแท็บใหม่เพื่อให้คุณลงชื่อเข้าใช้ได้อย่างปลอดภัย",
+  "ssoDialogHelpText": "🤔 หากคุณไม่เห็นแท็บใหม่ โปรดตรวจสอบตัวบล็อกป๊อปอัปของคุณ",
+  "@ssoDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@ssoDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
   }
 }
